# BackgroundMuterRS

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
src/: audio.rs  config.rs  main.rs  systray.rs  ui.rs
